# extrema_mcp_trading_agent

./: .gitignore  README.md
python_mcp_host/: README_USAGE.md  main.py  model_config.json  pyproject.toml  trading_style_example.json  trading_style_examples.txt
python_mcp_host/src/python_mcp_host/: __main__.py  infer_host.py  logger.py  model_operator.py
rust_mcp_server/: Cargo.toml  TIMEOUT_CONFIG.md  rustfmt.toml
rust_mcp_server/src/: arch.rs  main.rs
rust_mcp_server/src/arch/: account_module.rs  feats.rs  server_module.rs
rust_mcp_server/src/arch/account_module/: acc_base.rs  acc_core.rs  acc_utils.rs
rust_mcp_server/src/arch/feats/: alt_df_build.rs  expr_operators.rs
rust_mcp_server/src/arch/server_module/: server_base.rs  server_core.rs  server_utils.rs
